examples/test/testpolicy15366.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15366
  namespace: namespace34
spec:
  podSelector:
    matchLabels:
      key39: value18
      key32: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value5
          key38: value14
      podSelector:
        matchLabels:
          key33: value22
          key22: value6
